--- a/index.html
+++ b/index.html
@@ -20,22 +20,24 @@
         <img src="images/note.png" alt="" />
         <h1>Shopping List</h1>
       </header>
-      <form id="item-form">
-        <div class="form-control">
-          <input
-            type="text"
-            class="form-input"
-            id="item-input"
-            name="item"
-            placeholder="Enter Item"
-          />
-        </div>
-        <div class="form-control">
-          <button type="submit" class="btn">
-            <i class="fa-solid fa-plus"></i> Add Item
-          </button>
-        </div>
-      </form>
+      <div class = "form-and-cancel-container">
+        <form id="item-form">
+          <div class="form-control">
+            <input
+              type="text"
+              class="form-input"
+              id="item-input"
+              name="item"
+              placeholder="Enter Item"
+            />
+          </div>
+          <div class="form-control">
+            <button type="submit" class="btn">
+              <i class="fa-solid fa-plus"></i> Add Item
+            </button>
+          </div>
+        </form>
+      </div>
 
       <div class="filter">
         <input
